--- a/cinematics.html
+++ b/cinematics.html
@@ -4,16 +4,13 @@
 
 <head>
     <meta charset="utf-8">
-
     <link rel="stylesheet" href="styles/styles.css">
-
     <title>Cinematics / Cinemática</title>
-    <!--This sets the title of your page, which is the title that appears in the browser tab the page is loaded in. It is also used to describe the page when you bookmark/favorite it.-->
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
         content="Subpage showing information about vectors. / 
-				Subpágina mostrando información sobre cinemática.">
-   
+				Subpágina mostrando información sobre cinemática."
+    >
 	<!--To set the viewport of the page, which will give the browser instructions on how to control the page's dimensions and scaling.-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -31,16 +28,13 @@
     <script src="scripts/SelectLanguage.js" defer></script>
 </head>
 
-<!--the body contains all the content that you want to show to web users when they visit your page-->
 <body>
     <header>
-        <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, or styling -->
         <h1 id="Home" class="lang lang-en" >CINEMATICS</h1>
         <h1 id="Home" class="lang lang-es" lang="es" >CINEMÁTICA</h1>
     </header>
 	<p>Please, choose English or Spanish language. / Por favor, elige entre idioma Español o Inglés.</p>
     </div>
-		<!--<select onchange="changeLanguage(this.value)">-->
 		<select id="langSelector">
 			<option value="en">English</option>
 			<option value="es">Español</option>
