--- a/vectors.html
+++ b/vectors.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<!-- lang="en" declares the language of the Web page as English-->
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-
     <link rel="stylesheet" href="styles/styles.css">
-
     <title>TheHouseOfPhi Vectors/vectores</title>
-    <!--This sets the title of your page, which is the title that appears in the browser tab the page is loaded in. It is also used to describe the page when you bookmark/favorite it.-->
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
         content="Subpage showing information about vectors. /
-                Subpágina mostrando información sobre vectores.">
-   
+                Subpágina mostrando información sobre vectores."
+    >
 	<!--To set the viewport of the page, which will give the browser instructions on how to control the page's dimensions and scaling.-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<!-- LOAD THE MATHJAX LIBRARY start -->
     <!-- DOCS: https://docs.mathjax.org/en/latest/basic/mathematics.html -->
     <!-- DEMO: https://github.com/mathjax/MathJax-demos-web -->
@@ -32,10 +27,8 @@
     <script src="scripts/SelectLanguage.js" defer></script>
 </head>
 
-<!--the body contains all the content that you want to show to web users when they visit your page-->
 <body>
     <header>
-        <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, or styling -->
         <h2 id="Top" class="lang lang-en" >1. VECTORS</h2>
         <h2 id="Arriba" class="lang lang-es" lang="es" >1. VECTORES</h2>
     </header>
@@ -43,7 +36,7 @@
     <nav class="lang lang-en"> <!--Navigation bar. Links to the site's main sections-->
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#Vectors in Space">Vectors in Space</a></li>
+            <li><a href="#Introduction">Introduction</a></li>
             <li><a href="#Vector Operations Exercises">Vector Operations Exercises</a></li>
         </ul>
     </nav>
@@ -51,8 +44,8 @@
     <nav class="lang lang-es" lang="es"> <!--Navigation bar. Links to the site's main sections-->
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#Vectores">Vectores</a></li>
-            <li><a href="#Ejercicios con vectores">Ejercicios sobre vectores</a></li>
+            <li><a href="#Introducción">Introducción</a></li>
+            <li><a href="#Ejercicios con Introducción">Ejercicios sobre vectores</a></li>
         </ul>
     </nav>
 
@@ -64,8 +57,8 @@
     <div>
 
     <section> <!--1.1 Introduction-->
-        <h3 id="Vectors in Space" class="lang lang-en">1.1 Introduction--</h3>
-        <h3 id="Vectores" class="lang lang-es" lang="es">1.1 Introducción</h3>
+        <h3 id="Introduction" class="lang lang-en">1.1 Introduction</h3>
+        <h3 id="Introducción" class="lang lang-es" lang="es">1.1 Introducción</h3>
 
         <p class="lang lang-en">
             In this first chapter, we examine the concepts of vector, the Cartesian coordinate system and the main vector operations, which are key mathematical tools for dealing with vectors in more than one dimension.
@@ -77,7 +70,7 @@
     </section>
 
     <section><!--1.2 Vectors-->
-        <h3 class="lang lang-en">1.2 ectors</h3>
+        <h3 class="lang lang-en">1.2 Vectors</h3>
         <h3 class="lang lang-es" lang="es">1.2 Vectores</h3>
 
         <p class="lang lang-en">
@@ -1195,7 +1188,7 @@
         </ul>
     </aside>
 
-    <article>
+    <article><!--VECTOR OPERATIONS EXERCISES-->
         <h2 id="Vector Operations Exercises" class="lang lang-en">VECTOR OPERATIONS EXERCISES</h2>
         <a class="lang lang-en"
             href="#Top">
@@ -1222,7 +1215,7 @@
                 Vamos a representar el río en un plano de coordenadas donde el agua fluye en la misma dirección que el eje x, y el eje y es perpendicular a la orilla del río. Luego, representamos `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el bote. Y descomponer `vecv` en sus componentes x e y. Como los vectores que representan la velocidad son vectores libres, situamos el origen de `vecv_r` y `vecv` en el origen de coordenadas, como vectores de posición estándar.
             </p>
 
-            <figure class="centered">
+            <figure class="centered"><!--showing coordinate-plane, `vecv_r` as the water velocity and `vecv` as the velocity with which the boat is propelled-->
                 <svg
 					width="670" 
 					height="410"
@@ -1315,8 +1308,8 @@
 				    </g>	 
 				</svg>
 
-                <figcaption class="lang lang-en"><b>Figure 2.1,</b> showing coordinate-plane, `vecv_r` as the water velocity and `vecv` as the velocity with which the boat is propelled.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figura 2.1,</b> mostrando plano de coordenadas, `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el bote.</figcaption>
+                <figcaption class="lang lang-en"><b>Figure 1.a,</b> showing coordinate-plane, `vecv_r` as the water velocity and `vecv` as the velocity with which the boat is propelled.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 1.a,</b> mostrando plano de coordenadas, `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el bote.</figcaption>
             </figure>
 
             <p class="lang lang-en">
@@ -1468,7 +1461,7 @@
             <p class="lang lang-es" lang="es">
                 Entonces, la respuesta al ejercicio es que la embarcación debe ser impulsada a una velocidad de 37,11 Km/h y en una dirección que forme 104º con el río.
             </p>
-            <aside>
+            <aside><!--References-->
                 <!-- references to concepts used in this problem target="_blank" will display the link in a new tab. -->
                 <h4 class="lang lang-en">References</h4>
                 <h4 class="lang lang-es" lang="es">Referencias</h4>
@@ -1507,7 +1500,7 @@
                 Dibuja, uno a continuación del otro, los vectores `veca = 2veci + 3vecj`, `vecb = 4veci - 2vecj`, `vecc = 3veci - 2vecj` y `vecd = -9veci + j`. Calcula el vector resultante de la suma de todos ellos y su magnitud. 
             </p>
             
-            <figure class="centered">
+            <figure class="centered"><!--sum of `veca`, `vecb`, `vecc` and `vecd` using the graphical method-->
                 <svg
 					width="400" 
 					height="300"
@@ -1535,8 +1528,8 @@
 					</text>
 				</svg>
 
-                <figcaption class="lang lang-en"><b>Figure 2.2</b>, showing the sum of `veca`, `vecb`, `vecc` and `vecd` using the graphical method.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figura 2.2</b>, mostrando la suma de `veca`, `vecb`, `vecc` y `vecd` por el método gráfico.</figcaption>
+                <figcaption class="lang lang-en"><b>Figure 1.b</b>, showing the sum of `veca`, `vecb`, `vecc` and `vecd` using the graphical method.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 1.b</b>, mostrando la suma de `veca`, `vecb`, `vecc` y `vecd` por el método gráfico.</figcaption>
             </figure>
 
             <p class="lang lang-en">
@@ -1575,37 +1568,64 @@
             <p class="lang lang-es" lang="es">
                 Si situamos el eje x en la dirección este y el eje y en la dirección norte, la dirección NNE (nornoreste) está orientada formando un ángulo de 67,5º con el este; según se muestra en la siguiente figura.
             </p>   
-            <figure class="centered">
+            <figure class="centered"><!--showing angle between E and NE and `proj_Evecv`.-->
                 <svg
 					width="400" 
-					height="300"
-					viewBox="0 0 400 300" 
+					height="400"
+					viewBox="0 0 400 400" 
 					xmlns="http://www.w3.org/2000/svg">
-					<!--Vector a = 2i + 3j scale 40:1-->
-					<line x1="40" y1="200" x2="120" y2="80" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="70" y="120" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-						a
+					<!--https://developer.mozilla.org/en-US/docs/Web/CSS/named-color-->
+					
+					<!--East-->
+					<line x1="200" y1="200" x2="400" y2="200" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="380" y="220" font-size="25" stroke="brown" fill="brown">
+						E
 					</text>
-					<!--Vector b = 4i - 2j`scale 20:1-->
-					<line x1="120" y1="80" x2="280" y2="160" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="200" y="110" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-						b
+					<!--West-->
+					<line x1="200" y1="200" x2="0" y2="200" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text class="lang lang-en" x="5" y="220" font-size="25" stroke="brown" fill="brown">
+						W
 					</text>
-					<!--Vector c = 3i - 2j scale 20:1-->
-					<line x1="280" y1="160" x2="400" y2="240" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="345" y="195" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-						c
+					<text class="lang lang-es" lang="es" x="5" y="220" font-size="25" stroke="brown" fill="brown">
+						O
 					</text>
-					<!--Vector d = -9i + j scale 20:1-->
-					<line x1="400" y1="240" x2="40" y2="200" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="200" y="210" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-						d
+					<!--North-->
+					<line x1="200" y1="200" x2="200" y2="0" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="180" y="20" font-size="25" stroke="brown" fill="brown">
+						N
 					</text>
+					<!--South-->
+					<line x1="200" y1="200" x2="200" y2="400" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="180" y="380" font-size="25" stroke="brown" fill="brown">
+						S
+					</text>
+					<!--NorthEast-->
+					<line x1="200" y1="200" x2="370" y2="30" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="360" y="60" font-size="25" stroke="brown" fill="brown">
+						NE
+					</text>
+					<!--Draw an angle mark-->
+                    <path d="M 220 200 A 20 20 0 0 0 214 186" fill="transparent" stroke="green"/>
+                    <text x="224" y="195" font-size="15" stroke="green" fill="green">
+                          &#x03B8; = 45º<!-- This is the unicode for lowercase theta -->
+					</text>
+					<!--Velocity vector with scale 1:4 x=(600*cos45)/4=106 y=(600*sen45)/4=106-->
+					<line x1="200" y1="200" x2="306" y2="94" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
+				    <text x="240" y="140" font-size="20" stroke="green" fill="green" font-weight="bold">
+						V
+					</text>	
+					<!--Proyection vector with scale 1:4 x=424/4=106 -->
+					<line x1="306" y1="94" x2="306" y2="200" stroke="blue" stroke-width="2" stroke-dasharray="5,5" />
+					<line x1="200" y1="200" x2="306" y2="200" stroke="green" stroke-width="2"  stroke-dasharray="5,5" marker-end="url(#Greenarrow)" />
+				    <text x="220" y="220" font-size="20" stroke="green" fill="green" font-weight="bold" stroke-width="0.6">
+                      proj
+                      <tspan dx="-5" dy="8" font-size="15" stroke-width="0.3">E</tspan>
+                      <tspan dx="-5" dy="-8" font-size="20" stroke-width="0.6" font-weight="bold">v</tspan> 
+                    </text>
 				</svg>
-
-                <figcaption class="lang lang-en"><b>Figure 2.3</b>, showing the sum of `veca`, `vecb`, `vecc` and `vecd` using the graphical method.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figura 2.3</b>, mostrando la suma de `veca`, `vecb`, `vecc` y `vecd` por el método gráfico.</figcaption>
-            </figure>
+                <figcaption class="lang lang-en"><b>Figure 2.c</b>, showing angle between E and NE and `proj_Evecv`.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 2.c</b>, mostrando el ángulo formado entre E y NE, así como la `proj_Evecv`.</figcaption>
+			</figure>
 
             <p class="lang lang-en">
                 It can be seen that the origin of `veca` coincides with the end of `vecd`. So the vector resulting from said sum is the vector `vec0`, and its magnitude is zero.
@@ -1614,7 +1634,7 @@
                 Se puede observar que el origen de `veca` coincide con el final de `vecd`. Así que el vector resultante de dicha suma es el vector `vec0`,  y su magnitud es cero.
             </p>
 
-            <aside> <!-- references to concepts used in this problem target="_blank" will display the link in a new tab. -->    
+            <aside> <!-- references-->    
                 <h4 class="lang lang-en">References</h4>
                 <h4 class="lang lang-es" lang="es">Referencias</h4>
                 <ul >
@@ -1668,7 +1688,7 @@
 			</p>
             <p>&emsp; `vecv = 103.9*veci` m/s + `60*vecj` m/s </p>  
 			
-            <aside>
+            <aside><!--References-->
                 <h4 class="lang lang-en">References</h4>
                 <h4 class="lang lang-es" lang="es">Referencias</h4>
                 <ul>
@@ -1736,7 +1756,7 @@
 				<span class="lang lang-es" lang="es">107,67º</span> 
             </p>   
 
-            <aside>
+            <aside><!--References-->
                 <h4 class="lang lang-en">References</h4>
 				<h4 class="lang lang-es" lang="es">Referencias</h4>
                 <!-- references to concepts used in this problem target="_blank" will display the link in a new tab.-->
@@ -1772,7 +1792,7 @@
 			 <p class="lang lang-es" lang="es">
                 la dirección NE (noreste) forma un ángulo de 45º con la dirección este, como se muestra en la siguiente figura.
             </p>
-			<figure class="centered">
+			<figure class="centered"><!--showing angle between E and NE and `proj_Evecv`.-->
                 <svg
 					width="400" 
 					height="400"
@@ -1827,6 +1847,8 @@
                       <tspan dx="-5" dy="-8" font-size="20" stroke-width="0.6" font-weight="bold">v</tspan> 
                     </text>
 				</svg>
+                <figcaption class="lang lang-en"><b>Figure 2.c</b>, showing angle between E and NE and `proj_Evecv`.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 2.c</b>, mostrando el ángulo formado entre E y NE, así como la `proj_Evecv`.</figcaption>
 			</figure>
 			<p class="lang lang-en">
 				To find the projection of the velocity in the east direction, we use the expresion.
